# cg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README  compile_commands.json  myWork.txt
assets/shaders/: passThrough.frag  passThrough.vert  quad.frag  quad.vert  triangles.frag  triangles.vert
include/: Scene.h
include/loadShader/: LoadShaders.h
include/triangle/: C2GLProgram.h  Camera.h  GouradProgram.h  ImGuiPlugin.h  Material.h  MeshBundle.h  Object.h  ObjectFromFileIn.h  PhongProgram.h  Rasterizer.h  RenderTarget.h  Renderer.h  RendererCloseToGl.h  RendererCloseToGlWithRasterizer.h  RendererSimple.h  Scene.h  Texture.h  TriangleObject.h  Window.h
src/: C2GLProgram.cpp  Camera.cpp  GouradProgram.cpp  ImGuiPlugin.cpp  LoadShaders.cpp  MeshBundle.cpp  Object.cpp  ObjectFromFileIn.cpp  ObjectFromFileIn.h  PhongProgram.cpp  Rasterizer.cpp  RenderTarget.cpp  Renderer.cpp  RendererCloseToGl.cpp  RendererCloseToGlWithRasterizer.cpp  RendererSimple.cpp  Scene.cpp  Texture.cpp  TriangleObject.cpp  TriangleObject.h  Window.cpp  main.cpp
